cmss/main/default/objects/NonLifeInsuranceObject__c/NonLifeInsuranceObject__c.object-meta.xml
<CustomObject>
    <label>Non Life Insurance Object</label>
    <nameField>
        <label>Non Life Insurance Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non Life Insurance Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>