cmss/main/default/objects/NonLifeInsuranceObject__c/fields/AddressCity__c.field-meta.xml
<CustomField>
    <fullName>AddressCity__c</fullName>
    <label>Address City</label>
    <length>35</length>
    <type>Text</type>
</CustomField>