cmss/main/default/objects/NonLifeInsuranceObject__c/fields/AddressStreet__c.field-meta.xml
<CustomField>
    <fullName>AddressStreet__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Address Street</label>
    <length>45</length>
    <type>Text</type>
</CustomField>