cmss/main/default/objects/NonLifeInsuranceObject__c/fields/AddressZipCode__c.field-meta.xml
<CustomField>
    <fullName>AddressZipCode__c</fullName>
    <label>Address Zip Code</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>