cmss/main/default/objects/NonLifeInsuranceObject__c/fields/DeterminationInsuranceAmount__c.field-meta.xml
<CustomField>
    <fullName>DeterminationInsuranceAmount__c</fullName>
    <label>Determination Insurance Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>