cmss/main/default/objects/NonLifeInsuranceObject__c/fields/EstateCoveredArea__c.field-meta.xml
<CustomField>
    <fullName>EstateCoveredArea__c</fullName>
    <label>Estate Covered Area</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>