cmss/main/default/objects/NonLifeInsuranceObject__c/fields/EstatePurchaseType__c.field-meta.xml
<CustomField>
    <fullName>EstatePurchaseType__c</fullName>
    <label>Estate Purchase Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>