cmss/main/default/objects/NonLifeInsuranceObject__c/fields/EstateRealtyDesc__c.field-meta.xml
<CustomField>
    <fullName>EstateRealtyDesc__c</fullName>
    <label>Estate Realty Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>