cmss/main/default/objects/NonLifeInsuranceObject__c/fields/EstateRiskArea__c.field-meta.xml
<CustomField>
    <fullName>EstateRiskArea__c</fullName>
    <label>Estate Risk Area</label>
    <length>50</length>
    <type>Text</type>
</CustomField>