cmss/main/default/objects/NonLifeInsuranceObject__c/fields/EstateType__c.field-meta.xml
<CustomField>
    <fullName>EstateType__c</fullName>
    <label>Estate Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>