cmss/main/default/objects/NonLifeInsuranceObject__c/fields/HouseholdInhabitents__c.field-meta.xml
<CustomField>
    <fullName>HouseholdInhabitents__c</fullName>
    <label>Household Inhabitents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>