cmss/main/default/objects/NonLifeInsuranceObject__c/fields/HouseholdInsuranceAmountMainEstate__c.field-meta.xml
<CustomField>
    <fullName>HouseholdInsuranceAmountMainEstate__c</fullName>
    <label>Household Insurance Amount Main Estate</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>