cmss/main/default/objects/NonLifeInsuranceObject__c/fields/HouseholdInsuranceAmountTotal__c.field-meta.xml
<CustomField>
    <fullName>HouseholdInsuranceAmountTotal__c</fullName>
    <label>Household Insurance Amount Total</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>