cmss/main/default/objects/NonLifeInsuranceObject__c/fields/HouseholdInsurancePremiumTotal__c.field-meta.xml
<CustomField>
    <fullName>HouseholdInsurancePremiumTotal__c</fullName>
    <label>Household Insurance Premium Total</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>