cmss/main/default/objects/NonLifeInsuranceObject__c/fields/HouseholdInsuranceWithoutDisc__c.field-meta.xml
<CustomField>
    <fullName>HouseholdInsuranceWithoutDisc__c</fullName>
    <label>Household Insurance Premium Without Disc</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>