cmss/main/default/objects/NonLifeInsuranceObject__c/fields/HouseholdLocation__c.field-meta.xml
<CustomField>
    <fullName>HouseholdLocation__c</fullName>
    <label>Household Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>