cmss/main/default/objects/NonLifeInsuranceObject__c/fields/InsuranceType__c.field-meta.xml
<CustomField>
    <fullName>InsuranceType__c</fullName>
    <description>na základě vstupních hodnot ze CRO_CSPONZPPRE.TYP_POJISTENI se plní textem takto:
- pro  N = Nemovitost
- pro D = Domácnost</description>
    <label>Insurance Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>