cmss/main/default/objects/NonLifeInsuranceObject__c/fields/ObjectID__c.field-meta.xml
<CustomField>
    <fullName>ObjectID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Object ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>